--- a/codigo/GestionHotelera/Views/EmpresaHospedaje/Menu.cshtml
+++ b/codigo/GestionHotelera/Views/EmpresaHospedaje/Menu.cshtml
@@ -11,10 +11,10 @@
 
 <div style="background-color: white; font-family: 'Segoe UI', sans-serif; padding: 20px; max-width: 1200px; margin: auto; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
 
-    <!-- Botón de retroceso -->
-    <div style="margin-bottom: 20px;">
+    <!-- Boton de retroceso -->
+    @* <div style="margin-bottom: 20px;">
         <a href="/" style="background-color: #6c757d; color: white; padding: 8px 14px; border-radius: 6px; text-decoration: none;">← Volver a inicio</a>
-    </div>
+    </div> *@
 
     <header style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 30px;">
         <h1 style="color: #2c3e50; font-size: 28px;">@Model.DatosEmpresa.NombreHotel <span style="color: #27ae60; font-size: 20px;">@Model.DatosEmpresa.NombreTipoHotel</span></h1>
